# nhl-match-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  bot.py  data.dvc  docker-compose.yaml  pipeline.py  pipeline_runner.py  pyproject.toml  temporary_messed_readme.md
.dvc/: config
configs/: config.yaml  default.conf
configs/collect_data/: config.yaml
configs/modeling/: config.yaml
content/: index.html  matches.html
content/js/: matches.js
data/sql/: nhl.db.dvc
k8s/: backend-deployment.yaml  backend-service.yaml
logs/: logistic.dvc  random_forest.dvc
nhl_match_prediction/collector/: collect_nhl_raw.py  collect_standings.py  collect_text_api.py  collect_text_data.py  export_match_features.py  games.py  json_to_csv.py  load_to_sqllite.py
nhl_match_prediction/etl_pipeline/: build_match_features.py  build_oltp_tables.py  connection.py  export_match_features.py  get_upcoming_matches.py  init_db.py  json_to_csv.py  load_to_db.py  team_logo.py  upcoming_match_features.py
nhl_match_prediction/export_import_tables/: json_to_csv.py  load_to_sqllite.py
nhl_match_prediction/features/: additional_features.py  build_features.py  event_features.py  spatial_features.py  special_teams.py
nhl_match_prediction/games_features/: build_games_features.py  elo_matches.py  geo_location_data.py  performance_features.py
nhl_match_prediction/goalie_features/: goalie_features.py
nhl_match_prediction/modeling/: evaluate.py  factory.py  predict.py  train.py
nhl_match_prediction/notifications/: keys.py  scheduler.py  sender.py  service.py
nhl_match_prediction/pbp_features/: goalie_features.py  special_teams.py
nhl_match_prediction/player_stats_features/: player_features.py
nhl_match_prediction/tasks/: celery_app.py  (+1 more)
notebooks/: EDA.ipynb
pipelines/: __init__.py  pipeline.py  run_init.py
scripts/: __init__.py  check_tables.py  create_tasks_table.py  show_tasks.py  tasks.py  test_insert_task.py
(+35 files in other folders)
